<resources>
    <string name="app_name">Messenger App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_nickname">Enter your nickname</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_up">Sign Up</string>
    <string name="what_i_do">What I do</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered">Not Registered?</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="floating_button_description">Start a new conversation</string>
    <string name="search">Search</string>
    <string name="name_placeholder">Name</string>
    <string name="update">Update</string>
    <string name="nickname">Nickname</string>
    <string name="profession">Profession</string>
    <string name="name">Name</string>
    <string name="avatar_desc">contact avatar</string>
    <string name="sent_time">Sent time</string>
    <string name="messagetext">MessageText</string>
    <string name="sign_out">sign out</string>
</resources>