<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignInActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/login_avatar_size"
        android:layout_height="@dimen/login_avatar_size"
        android:layout_marginTop="@dimen/login_avatar_margin"

        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar_image_placeholder"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/nickname_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:padding="@dimen/padding"
        android:textAlignment="center"
        android:ems="@dimen/edit_text_ems"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_nickname"
        android:background="@drawable/gray_background"
        android:textColor="@color/edit_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:padding="@dimen/padding"

        android:textAlignment="center"
        android:ems="@dimen/edit_text_ems"
        android:inputType="textPassword"
        android:hint="@string/enter_your_password"
        android:background="@drawable/gray_background"
        android:textColor="@color/edit_text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname_field"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/sign_in"
        android:backgroundTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field" />

    <TextView
        android:id="@+id/not_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_registered"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/margin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/gray_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/gray_dark"
        android:layout_marginBottom="@dimen/margin"/>


    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        android:layout_width="@dimen/loader_size"
        android:layout_height="@dimen/loader_size"
        android:layout_gravity="center"
        android:indeterminateTint="@color/sky"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>