<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".chat.ChatActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/chat_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back"
                app:navigationIconTint="?attr/colorOnPrimary"
                android:layout_gravity="bottom">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/chat_avatar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="@dimen/margin_small"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/avatar_image_placeholder"
                        android:contentDescription="@string/avatar_desc" />

                    <TextView
                        android:id="@+id/chat_profession_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="?attr/colorOnPrimary"
                        app:layout_constraintStart_toStartOf="@+id/chat_name_label"
                        app:layout_constraintTop_toBottomOf="@+id/chat_name_label"
                        android:layout_marginTop="@dimen/margin_small"
                        android:text="@string/profession"/>

                    <TextView
                        android:id="@+id/chat_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/name"
                        android:textSize="@dimen/conversation_item_name_size"
                        android:textColor="?attr/colorOnPrimary"
                        android:layout_marginTop="@dimen/margin"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/chat_message_field_height"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/chat_message_field_height"
        android:layout_gravity="bottom">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="@drawable/gray_background">

            <EditText
                android:id="@+id/message_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:background="@android:color/transparent"
                android:hint="@string/search"
                android:inputType="textPersonName"
                android:padding="@dimen/padding"
                android:textColor="@color/edit_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/chat_send_button"/>

            <ImageButton
                android:id="@+id/chat_send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginRight="@dimen/margin" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>
</androidx.coordinatorlayout.widget.CoordinatorLayout>